--- a/.gitignore
+++ b/.gitignore
@@ -5,20 +5,7 @@
 *.log
 
 /.idea/workspace.xml
+/.idea/libraries
+/target
 
-# BlueJ files
-*.ctxt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
